--- a/output/noisesocket.html
+++ b/output/noisesocket.html
@@ -39,7 +39,7 @@
 </div>
 <h1 id="abstract"><strong>Abstract</strong></h1>
 <p>NoiseSocket is an extension of the Noise Protocol Framework that enables quick and seamless secure connections with minimal code size, small keys, modern ciphers and hash functions, and extremely fast speed. It can be used with raw public keys instead of X.509 infrastructure and targets IoT devices, microservices, and back-end applications such as datacenter-to-datacenter communications.</p>
-<p></p>
+
 <h1 id="overview">1. Overview</h1>
 <p>The Noise Protocol Framework <span class="citation">[<a href="#ref-noise">1</a>]</span> describes simple <strong>Noise protocols</strong>. A Noise protocol sends a fixed sequence of handshake messages based on a fixed set of cryptographic choices. In some situations this is too rigid, and the responder needs flexibility to accept or reject the initiator's Noise protocol choice, or make its own choice based on options offered by the initiator.</p>
 <p>The <strong>NoiseSocket</strong> framework allows the initiator and responder to negotiate a particular Noise protocol. This is a two-step process:</p>
@@ -93,7 +93,7 @@
 <li><p><strong>Change protocol and send reinitialization request</strong>: The responder requests the initiator to send a NoiseSocket handshake message containing a handshake message from a new Noise protocol, different from the initial Noise protocol. The <code>negotiation_data</code> field must be non-empty. The <code>noise_message</code> field must be empty.</p></li>
 </ul>
 <p>The initiator's first <code>negotiation_data</code> field must indicate the initial Noise protocol and what other Noise protocols the initiator can support. How this is encoded is up to the application.</p>
-<p>If the responder's first <code>negotiation_data</code> field is empty, then the initial protocol was accepted. If the field is non-empty, it must encode values that distinguish betwen the &quot;explicit rejection&quot;, &quot;fallback&quot;, and &quot;reinitialization request&quot; cases. In the first case, the <code>negotiation_data</code> must encode an error message. In the latter two cases, the <code>negotiation_data</code> must encode the Noise protocol the initiator should fallback to or reinitialize with.</p>
+<p>If the responder's first <code>negotiation_data</code> field is empty, then the initial protocol was accepted. If the field is non-empty, it must encode values that distinguish between the &quot;explicit rejection&quot;, &quot;fallback&quot;, and &quot;reinitialization request&quot; cases. In the first case, the <code>negotiation_data</code> must encode an error message. In the latter two cases, the <code>negotiation_data</code> must encode the Noise protocol the initiator should fallback to or reinitialize with.</p>
 <p>When the initiator receives the first NoiseSocket response message, and for all later handshake messages received by both parties, the only options are silent rejection, explicit rejection, or acceptance.</p>
 <p>Example negotiation flows:</p>
 <ul>
@@ -174,6 +174,16 @@
 <ul>
 <li>INPUT: transport_message</li>
 <li>OUTPUT: message_body</li>
+</ul>
+<p>Additionally, either party may call <code>ExportSecret</code> to export a cryptographic secret derived from the Noise <span class="citation">[<a href="#ref-noise">1</a>]</span> shared secret key. Clients may use this exported secret to key other symmetric key protocols.</p>
+<p><strong><code>ExportSecret</code></strong>:</p>
+<ul>
+<li>INPUT: export_label, export_context, export_len
+<ul>
+<li><code>export_label</code> and <code>export_context</code> may be empty (NULL) strings</li>
+<li><code>export_len</code> must be a positive integer</li>
+</ul></li>
+<li>OUTPUT: derived key of length <code>export_len</code></li>
 </ul>
 <h1 id="ipr">6. IPR</h1>
 <p>The NoiseSocket specification (this document) is hereby placed in the public domain.</p>
